--- a/style.css
+++ b/style.css
@@ -13,12 +13,152 @@ body{
     margin: 0%;
 }
 
+a{
+    text-decoration: none;
+    color: #000;
+
+}
+
+a:hover{
+
+    color: red;
+}
+
+a:active{
+    color: green;
+}
+
 .container{
-    width: 500px;
+    width: 80%;
     margin: auto;
+}
+
+.button[type="Submit"]{
+    background-color: #333;
+    color: #ccc;
+    padding: 10px 15px;
+    border: none;
+}
+
+.button:hover{
+    background-color: red;
+    color: white;
+}
+
+.clr{
+    clear: both;
 }
 
 .box-1{
     background-color: black;
     color: #f4f4f4;
+
+    border: 5px red solid;
+
+    padding: 20px;
+
+    margin: 20px 0;
 }
+
+.box-1 h1{
+
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 800;
+    font-style: italic;
+    text-decoration: underline;
+    text-transform: uppercase;
+    letter-spacing: 0.2em;
+    word-spacing: 1em;
+
+}
+
+.box-2{
+    border: 3px dotted #ccc;
+    padding: 20px;
+    margin: 20px 0;
+
+}
+
+.categories{
+    border: 1px #ccc solid;
+    padding: 10px;
+    border-radius: 15px;
+}
+.categories h2{
+    text-align: center;
+
+}
+
+.categories ul{
+    padding: 0;
+    list-style: square;
+    list-style: none;
+}
+
+.categories li{
+    padding-bottom: 6px;
+    border-bottom: dotted 1px #333;
+
+}
+
+.my-form{
+    padding: 20px;
+}
+
+.my-form.form-group{
+    padding-bottom: 15px;
+}
+.my-form label{
+    display: block;
+}
+
+.my-form input [type="text"], .my-form textarea{
+    padding: 8px;
+    width: 100%;
+
+}
+
+.block{
+    float: left;
+    width: 33.3%;
+    border: 1px solid #ccc;
+    padding: 10px;
+    box-sizing: border-box;
+}
+
+#main-block{
+    float: left;
+    width: 70%;
+    padding: 15px;
+    box-sizing: border-box;
+}
+
+#sidebar{
+    float: right;
+    width: 30%;
+    background-color: #333;
+    color: white;
+    padding: 15px;
+    box-sizing: border-box;
+    position: relative;
+}
+
+.p-box{
+    width: 800px;
+    height: 500px;
+    border: 1px solid black;
+    margin-top: 30px;
+}
+
+.p-box h1{
+    position: absolute;
+    top: 100px;
+    left: 200px;
+}
+
+.p-box h2{
+    position: absolute;
+    bottom: 40px;
+    right: 100px;
+}
+
